Project:Recipe Search

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container-form" id="top">
 			<h1>Recipe Search</h1>
 			<form autocomplete="off">
-				<input type="search" name="keyword">
+				<input type="Search" name="keyword">
 				<input style="font-size: 18px;width: 120px; padding: 6px; border-radius: 30px;" type="submit" id="submit" value="Search" name="search">
 			</form>
 		</div>
